# datahow-mab-titer-prediction

./: .dockerignore  .gitignore  AI_LOG.md  Dockerfile  README.md  pyproject.toml
interview_files/: inference_server_spec.yml
models/: test_predictions.csv  titer_model.pkl
notebooks/: 00_research_notes.md  01_eda.ipynb  02_modeling.ipynb  data_findings.md
scripts/: sample_payload.json
src/: api.py  features.py
tests/: test_api.py  test_features.py  test_model.py
