[project]
name = "mab-titer-prediction"
version = "0.1.0"
description = "mAb bioprocess titer prediction model and inference server"
authors = [
    {name = "Joao Rodrigues"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic (>=2.13.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.notebook.dependencies]
matplotlib = ">=3.10.8,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
jupyter = ">=1.1.1,<2.0.0"
optuna = ">=4.8.0,<5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
httpx = "^0.28.1"
ruff = "^0.15.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
extend-exclude = ["notebooks/*.ipynb"]

